--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "node": "^16.14.0"
   },
   "dependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.12",
     "@types/dotenv": "^8.2.0",
@@ -26,6 +27,8 @@
     "@types/jsonwebtoken": "^8.5.8",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^17.0.23",
+    "@types/nodemailer": "^6.4.4",
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
@@ -38,6 +41,7 @@
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "mongoose": "^6.2.9",
+    "nodemailer": "^6.7.3",
     "winston": "^3.6.0"
   },
   "devDependencies": {
